# python-project-lvl1

./: README.md  makefile  pyproject.toml
.github/workflows/: py_ci.yml
brain_games/: cli.py  game_engine.py  utils.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
