[tool.poetry]
name = "hexlet-code"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
br-games = "brain_games.scripts.brain_games:main"
br-even = "brain_games.scripts.brain_even:main"
br-calc = "brain_games.scripts.brain_calc:main"
br-gcd = "brain_games.scripts.brain_gcd:main"
br-pr = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
